@@ -61,13 +61,13 @@ public final class UISettings extends LimeProps {
      * was resized by the user.
      */
     public static final IntSetting UI_OPTIONS_DIALOG_WIDTH =
-            FACTORY.createIntSetting("UI_OPTIONS_DIALOG_WIDTH", 844);
+            FACTORY.createIntSetting("UI_OPTIONS_DIALOG_WIDTH", 1110);
     /**
      * Setting to persist the height of the options dialog if the dialog
      * was resized by the user.
      */
     public static final IntSetting UI_OPTIONS_DIALOG_HEIGHT =
-            FACTORY.createIntSetting("UI_OPTIONS_DIALOG_HEIGHT", 670);
+            FACTORY.createIntSetting("UI_OPTIONS_DIALOG_HEIGHT", 793);
     /**
      * Setting that globally enables or disables notifications.
      */
